<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSalmon">

    <TextView
        android:id="@+id/song_title_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/placeholder_title_name"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/song_profile_header_margin"
        android:textColor="@android:color/black"
        android:textSize="@dimen/header_text_size"/>

    <TextView
        android:id="@+id/song_artist_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/placeholder_artist_name"
        android:textAlignment="center"
        android:textSize="@dimen/artist_text_size"/>

    <TextView
        android:id="@+id/song_album_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/placeholder_album_name"
        android:textAlignment="center"
        android:textSize="@dimen/album_text_size"/>

    <ImageView
        android:id="@+id/song_album_image"
        android:layout_width="@dimen/song_profile_image_height_width"
        android:layout_height="@dimen/song_profile_image_height_width"
        android:layout_gravity="center"
        android:layout_margin="@dimen/song_profile_image_margin"
        android:src="@drawable/ic_launcher_background"
        android:contentDescription="@string/description_album_image"/>

    <ImageButton
        android:id="@+id/song_play_imagebutton"
        android:layout_width="@dimen/imagebutton_height_width"
        android:layout_height="@dimen/imagebutton_height_width"
        android:background="@drawable/button_click_effect_pause"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/imagebutton_margin"
        android:contentDescription="@string/description_play_button"/>

</LinearLayout>